# marketing-copy-assignment

./: .gitignore  README.md  eval_pipeline.py  evals.py  explore_marimo.py  main.py  pyproject.toml
fixtures/: 101_casa_del_mar.json  102_eixample_loft.json  103_honeysuckle_cottage.json  104_sunny_central_studio.json  105_marina_view.json  106_alpine_escape.json  107_estrela_apartments.json  108_finca_las_rosas.json  109_atico_dorado.json
golden/: 101_casa_del_mar.json  102_eixample_loft.json  103_honeysuckle_cottage.json  104_sunny_central_studio.json  105_marina_view.json  106_alpine_escape.json  107_estrela_apartments.json  108_finca_las_rosas.json  109_atico_dorado.json
lodgify/: __init__.py  amenities.py  data.py  generator.py  golden.py  ingest.py  models.py  scorers.py
logs/: 2026-06-19T10-34-39-00-00_stub-eval_VsY4nP8q87HYdKzLMLYTp5.eval  2026-06-19T10-35-23-00-00_stub-eval_DSgqak8S4QUc7Shy73gxn7.eval  2026-06-19T10-35-49-00-00_listing-eval_J3TpSYZrRJC9gtj8HrJLW2.eval  2026-06-19T10-36-19-00-00_listing-eval_dhyHTJvHDWXhThoFuCVYST.eval  2026-06-19T10-37-28-00-00_listing-eval_XEMyYhMXtMvqx3uzDivnZS.eval  2026-06-19T10-38-17-00-00_listing-eval_UC2cQqfMyLBHqfxPcnQeKf.eval  2026-06-19T10-39-16-00-00_listing-eval_ME9ZyfCRkYS2tVTJnMiJau.eval  2026-06-19T10-39-53-00-00_listing-eval_kHZq92cACYrD4i4xcZHbfb.eval  2026-06-19T10-41-36-00-00_listing-eval_KMWXeJWxja8pky8eBEZqgS.eval  2026-06-19T10-42-51-00-00_reliability-eval_TG89TocNQoqpnmiCZp8mJL.eval  2026-06-19T14-01-31-00-00_golden-eval_DDYRBzxb82AnWRytQuppKm.eval  (+10 more)
prompts/: system.txt  v1.txt  v2.txt  v3.txt  v4.txt  (+1 more)
(+1 files in other folders)
