[project]
name = "lodgify"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13.13"
dependencies = [
    "anthropic>=0.111.0",
    "inspect-ai>=0.3.240",
    "marimo>=0.23.10",
    "python-dotenv>=1.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lodgify"]

[dependency-groups]
dev = [
    "ruff>=0.15.18",
    "pytest>=8.3.0",
]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]
